--- a/numberui/src/App.css
+++ b/numberui/src/App.css
@@ -32,7 +32,40 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+/* contact input box animation style */
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+    transform-origin: center center;
+    animation-timing-function: ease-out;
+  }
+
+  10% {
+    transform: scale(.91);
+    animation-timing-function: ease-in;
+  }
+
+  17% {
+    transform: scale(.98);
+    animation-timing-function: ease-out;
+  }
+
+  33% {
+    transform: scale(.87);
+    animation-timing-function: ease-in;
+  }
+  45% {
+    transform: scale(1);
+    animation-timing-function: ease-out;
+  }
+}
+
+.inputTextField {
+  animation: 1.75s ease-in-out 0s infinite normal both running heartbeat;
 }
